<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Download_failed">Firmware download completed, but verification failed. Please check the network</string>
    <string name="Download_succeed">Firmware download completed, click to upgrade</string>
    <string name="Open_file_manager_to_view">Do you want to open the file manager to view it?</string>
    <string name="USB_disk">USB device</string>
    <string name="USB_disk_insertion_detected">Detected USB drive insertion</string>
    <string name="app_name">Upgrade</string>
    <string name="app_name1">sysapp</string>
    <string name="auto_check_update">Automatic detection of online upgrades</string>
    <string name="back">Back</string>
    <string name="cache_dir">/cache</string>
    <string name="cancel">Cancel</string>
    <string name="check_connecting">Connecting to server…</string>
    <string name="check_cycle">1</string>
    <string name="check_failed">No new firmware found!</string>
    <string name="check_now">Checking for updates, please wait…</string>
    <string name="check_succeed">New firmware is available!</string>
    <string name="check_unknown">Encountered unknown error!</string>
    <string name="close_auto_update_check">Turn off automatic detection upgrade</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_update">Upgrade</string>
    <string name="copying">Copying</string>
    <string name="download_back">Return for recheck</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_download">Download</string>
    <string name="download_downloading">Dowloading</string>
    <string name="download_downloading_wait">Downloading upgrade package, please wait</string>
    <string name="download_error">Download failed, please check the network!</string>
    <string name="download_failed">Download failed</string>
    <string name="download_message">Last download was not completed, do you want to continue?</string>
    <string name="download_pause">Pause</string>
    <string name="download_resume">Continue</string>
    <string name="download_title">Download prompt!</string>
    <string name="download_update">Upgrade Now</string>
    <string name="global_Message">System update preparation completed</string>
    <string name="global_Message_2">Updating system, the system will automatically restart during the update process. Please do not power off…</string>
    <string name="global_Negative_Button">Next time restarting and updating the system</string>
    <string name="global_Positive_Button">Restart and update the system immediately</string>
    <string name="global_Title">System updates</string>
    <string name="have_no_update_log">No update logs</string>
    <string name="hello">Hello World, UpdateActivity!</string>
    <string name="help">Help</string>
    <string name="install_ota_help">Starting OTA upgrade</string>
    <string name="install_ota_notice">During the upgrade process, please do not power off and the operation cannot be interrupted</string>
    <string name="install_ota_output_check_file_error">Upgrade package verification failed, file does not exist. Please recheck your upgrade package!</string>
    <string name="install_ota_output_check_ok">Upgrade package verification passed…</string>
    <string name="install_ota_output_check_unkown_error">Upgrade package verification failed, unknown error, please recheck your upgrade package!</string>
    <string name="install_ota_output_check_upgrade_error">Upgrade package verification failed, Security exception. Please recheck your upgrade package!</string>
    <string name="install_ota_output_checking">Verifying upgrade package…</string>
    <string name="install_ota_output_confirm">During the upgrade process, actions cannot be interrupted. Please backup your data properly.</string>
    <string name="install_ota_output_copy_failed">Copy failed, please check your disk space!！</string>
    <string name="install_ota_output_copy_ok">Copy completed…</string>
    <string name="install_ota_output_copying">Copying files…</string>
    <string name="install_ota_output_restart">Restarting system, starting upgrade…</string>
    <string name="install_ota_output_start">Starting upgrade... Please do not power off during the process</string>
    <string name="install_ota_title">Verify File</string>
    <string name="local_disk">Local Disk</string>
    <string name="local_name">Local files</string>
    <string name="menu_check">Check for updates</string>
    <string name="menu_download">Download the latest update package</string>
    <string name="menu_go_on_download">Continue downloading</string>
    <string name="menu_has_newversion">There is a new version, click to download!</string>
    <string name="menu_has_not_newnewsion">The current version is the latest.</string>
    <string name="menu_update">Upgrade Now</string>
    <string name="message_1">Upgrade package exceeds available space in cache partition</string>
    <string name="message_2">The cache partition is sufficient</string>
    <string name="message_3">Upgrade files will be copied to the data partition</string>
    <string name="message_4">Upgrade files will be copied to the cache partition</string>
    <string name="message_5">Copy failed</string>
    <string name="message_6">Upgrade package detected</string>
    <string name="message_7">Are you sure you want to upgrade?</string>
    <string name="net_error">Check for updates failed, please check the network</string>
    <string name="notification_download_title">Downloading update package</string>
    <string name="open_auto_update_check">Turn on automatic detection upgrade</string>
    <string name="ota_update">Perform OTA upgrade</string>
    <string name="pack_img_card">Create upgrade cards</string>
    <string name="recovery_cacel">Cancel</string>
    <string name="recovery_msg">Are you sure you want to enter Recovery mode</string>
    <string name="recovery_name">Recovery</string>
    <string name="recovery_title">Prompt</string>
    <string name="second_server_url_in_domain">http://live.sz-cloudmedia.com:8080/ota/rk3128/public/ota_update.xml</string>
    <string name="sure">Sure</string>
    <string name="system_model">Model：</string>
    <string name="system_version">Version：</string>
    <string name="update_local">Local upgrade</string>
    <string name="update_name">System upgrade</string>
    <string name="update_name_test_mode">System upgrade testing mode</string>
    <string name="update_online">Online upgrade</string>
    <string name="update_package_device_plug_in">The inserted device contains a new version of the upgrade package. Would you like to upgrade the system?</string>
    <string name="update_record">Update logs</string>
    <string name="verifying">Verifying</string>
</resources>
