<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/show_dialog_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/sp_22"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/recovery_title_name"
        android:background="@drawable/show_dialog_title"
        android:padding="@dimen/dp_10"
        android:layout_width="@dimen/dp_330"
        android:layout_height="wrap_content"
        android:text="@string/recovery_title"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:text="@string/recovery_msg"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20">
        <Button
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:state_focused="true"
            android:id="@+id/confirm"
            android:background="@drawable/update_systle_btn"
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_35"
            android:text="@string/recovery_name"
            android:singleLine="true"/>
        <Button
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            android:id="@+id/cancel"
            android:background="@drawable/update_systle_btn"
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/recovery_cacel"
            android:singleLine="true"/>
    </LinearLayout>
</LinearLayout>
