<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:id="@+id/updatename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/update_name"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"/>
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:singleLine="true"/>
        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/imge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/mode_line"/>
        <TextView
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:singleLine="true"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32">
            <Button
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:id="@+id/update_online"
                android:background="@drawable/update_systle_btn"
                android:layout_width="@dimen/dp_155"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_35"
                android:text="@string/update_online"
                android:layout_marginStart="@dimen/dp_10"/>
            <Button
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:id="@+id/update_local"
                android:background="@drawable/update_systle_btn"
                android:layout_width="@dimen/dp_155"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_35"
                android:text="@string/update_local"
                android:layout_marginStart="@dimen/dp_10"/>
            <Button
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:id="@+id/update_log"
                android:background="@drawable/update_systle_btn"
                android:layout_width="@dimen/dp_155"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp_35"
                android:text="@string/update_record"
                android:layout_marginStart="@dimen/dp_10"/>
        </LinearLayout>
        <CheckBox
            android:textSize="27sp"
            android:textColor="@android:color/black"
            android:id="@+id/updateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:checked="true"
            android:text="@string/auto_check_update"
            android:layout_marginStart="@dimen/dp_10"
            style="@style/CustomCheckboxTheme"/>
        <FrameLayout
            android:id="@+id/download_mainui"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8"/>
    </LinearLayout>
</LinearLayout>
